--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
 		</dependency>
 	</dependencies>
 	<build>
-		<finalName>mvn-hello-world</finalName>
+		<finalName>mvn-hello-world-${project.version}-build${build.number}</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
