--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,11 @@
 	<version>1.0-SNAPSHOT</version>
 	<name>mvn-hello-world Maven Webapp</name>
 	<url>http://maven.apache.org</url>
+
+	<properties>
+    	<build.number>Test</build.number>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>javax.servlet</groupId>
