--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,6 @@
 	<artifactId>mvn-hello-world</artifactId>
 	<packaging>war</packaging>
 	<version>1.1-SNAPSHOT</version>
-	<finalName>test-mvn-hello-world-${project.version}-build${build.number}</finalName>
 	<name>mvn-hello-world Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 
@@ -40,6 +39,7 @@
 		</dependency>
 	</dependencies>
 	<build>
+		<finalName>mvn-hello-world</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
