--- a/test.yml
+++ b/test.yml
@@ -1,7 +1,7 @@
 ---
-hosts: all
+ - hosts: all
 
-tasks: 
-  - name: poc
-    debug:
-      msg: "testing"
+   tasks: 
+      - name: poc
+        debug:
+          msg: "testing"
