--- a/test.yml
+++ b/test.yml
@@ -1,7 +1,8 @@
 ---
  - hosts: all
+   connection: local
 
    tasks: 
       - name: poc
         debug:
-          msg: "testing"
+          msg: "testing - env VAR BUILD NUMBER - {{ build_number }}"
