test war file download

--- a/test.yml
+++ b/test.yml
@@ -6,3 +6,10 @@
       - name: poc
         debug:
           msg: "testing - env VAR BUILD NUMBER - {{ build_number }}"
+      
+      - name: test download
+        get_url:
+          url: http://localhost:8082/artifactory/maven-hello-world-repo/com/dev3l/hello_world/mvn-hello-world/1.0-SNAPSHOT-build38/mvn-hello-world-1.0-SNAPSHOT-build38.war
+          url_username: admin
+          url_password: karimB1994
+          dest: /test.war
