--- a/test.yml
+++ b/test.yml
@@ -3,13 +3,16 @@
    connection: local
 
    tasks: 
+      - name: get creds
+        include_vars: secrets.yml
+
       - name: poc
         debug:
           msg: "testing - env VAR BUILD NUMBER - {{ build_number }}"
       
       - name: test download
         get_url:
-          url: http://localhost:8082/artifactory/maven-hello-world-repo/com/dev3l/hello_world/mvn-hello-world/1.0-SNAPSHOT-build38/mvn-hello-world-1.0-SNAPSHOT-build38.war
-          url_username: admin
-          url_password: karimB1994
-          dest: /var/lib/jenkins/workspace/test.war
+          url: http://localhost:8082/artifactory/maven-hello-world-repo/com/dev3l/hello_world/mvn-hello-world/1.0-SNAPSHOT-build{{ build_number }}/mvn-hello-world-1.0-SNAPSHOT-build{{ build_number }}.war
+          url_username: "{{ artifactory_user }}"
+          url_password: "{{ artifactory_pass }}"
+          dest: /var/lib/jenkins/workspace/test-.war
