--- a/test.yml
+++ b/test.yml
@@ -4,16 +4,15 @@
    gather_facts: false
 
    tasks: 
-      - name: get creds
+
+      # load secrets
+      - name: Get creds
         include_vars: 
           file: secrets.yml
           name: vault_secrets
-
-      - name: poc
-        debug:
-          msg: "testing - env VAR BUILD NUMBER - {{ build_number }}"
       
-      - name: test download
+      # 
+      - name: Download Artifacts
         get_url:
           url: http://localhost:8082/artifactory/maven-hello-world-repo/com/dev3l/hello_world/mvn-hello-world/1.0-SNAPSHOT-build{{ build_number }}/mvn-hello-world-1.0-SNAPSHOT-build{{ build_number }}.war
           url_username: "{{ vault_secrets.artifactory_user }}"
