--- a/pom.xml
+++ b/pom.xml
@@ -9,16 +9,13 @@
 	<name>mvn-hello-world Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 
-	<properties>
-    	<build.number>Test</build.number>
-	</properties>
-
 	<dependencies>
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
 			<version>2.5</version>
 		</dependency>
+
 		<!-- junit -->
 		<dependency>
 			<groupId>junit</groupId>
@@ -26,6 +23,7 @@
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
+
 		<!-- log4j -->
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
@@ -38,8 +36,9 @@
 			<version>2.5</version>
 		</dependency>
 	</dependencies>
+	
 	<build>
-		<finalName>mvn-hello-world-${project.version}-build${build.number}</finalName>
+		<finalName>mvn-hello-world-${project.version}</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
