--- a/download_artifacts.yml
+++ b/download_artifacts.yml
@@ -8,7 +8,7 @@
       artifactory_url: http://localhost:8082/artifactory
       artifactory_repo: maven-hello-world-repo
       artifactory_artifact_path: com/dev3l/hello_world/mvn-hello-world/1.0-SNAPSHOT-build{{ build_number }}
-      artifactory_artifact_name: 1.0-SNAPSHOT-build{{ build_number }}.war
+      artifactory_artifact_name: mvn-hello-world-1.0-SNAPSHOT-build{{ build_number }}.war
 
    pre_tasks: 
 
@@ -19,7 +19,7 @@
           name: vault_secrets
 
    tasks: 
-   
+
       # Get Artifact from artifactory
       - name: Download Artifacts
         get_url:
